added hyperlink to index.html

--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <title>Ethan Foster CSE160 Spring 2024</title>
 </head>
 <body>
+    Ethan Foster CSE160 Spring 2024
+    <br>
+    <a href="asgn0/asgn0.html">asgn0</a>
 </body>
 </html>
