--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <body>
     Ethan Foster CSE160 Spring 2024
     <br>
+    <br>
+    Assignments:
+    <br>
     <a href="asgn0/asgn0.html">asgn0</a>
 </body>
 </html>
